syntax = "proto3";
package proto;
option go_package = "../proto";

service Auth {
    rpc RegisterFingerprint (RegisterFingerprintRequest) returns (RegisterFingerprintResponse) {}
    rpc VerifyLicense (VerifyLicenseRequest) returns (VerifyLicenseResponse) {}
}

message RegisterFingerprintRequest {
    string ip = 1;
    string mac = 2;
    string fingerprint = 3;
}

message RegisterFingerprintResponse {
    string license = 1;
    string signature = 2;
}

message VerifyLicenseRequest {
    string license = 1;
    string signature = 2;
}

message VerifyLicenseResponse {
    bool valid = 1;
    int32 license_type = 2;
    string expire_at = 3;
}